--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #111111;
+    color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.filter-button {
+    backdrop-filter: blur(5px);
 }
+
+.button-gradient {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(135deg, rgba(236, 200, 200, 0.7) 2%, rgba(0, 0, 0, 0.12) 12%, rgba(255, 255, 255, 0.02) 20%);
+}
+
