--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,14 @@ body {
 .radial-bg {
     background: radial-gradient(circle at 50% 50%, rgba(104, 58, 183, 0.46) 0%, rgba(104, 58, 183, 0.46) 33%, rgba(238, 130, 238, 0) 100%);
 }
+
+.line-gradient {
+    background: rgb(217, 217, 217);
+    background: linear-gradient(308deg, rgba(217, 217, 217, 0) 0%, rgba(217, 217, 217, 1) 50%, rgba(217, 217, 217, 0) 100%);
+    height: 1px;
+}
+
+.accordion-gradient {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(126deg, rgba(45, 0, 96, 0.14) 1%, rgb(0, 0, 0) 40%, rgba(0, 0, 0, 0.627) 100%);
+}
